--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1792,6 +1792,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In our first graph, we can see evidence of a hyperbolic trend, peaking from Latitudes -15 degrees to 15 degrees. At this peak range, temperature was approximately 79 degrees."
    ]
   },
@@ -1808,13 +1815,6 @@
    "source": [
     "Finally we observe chaos in the final graph charting Latitude versus Cloudiness. In the same Latitude we find ranges from 0 to 100 percent cloudiness suggesting not even a trend within one Latitude, nevermind across Latitudes."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
